--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
+    "react-select-country-list": "^2.2.3",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-lazy-load-image-component": "^1.6.4",
+    "@types/react-select-country-list": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
