--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "firebase": "^10.12.1",
     "jwt-decode": "^4.0.0",
+    "material-ui-confirm": "^3.0.15",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
